<resources>
        <string name="app_name">Languages</string>
        <string name="title_activity_dash_board">DashBoard</string>
        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="nav_header_title">Android Studio</string>
        <string name="nav_header_subtitle">android.studio@android.com</string>
        <string name="nav_header_desc">Navigation header</string>
        <string name="action_settings">Settings</string>

        <string name="menu_home">Home</string>
        <string name="menu_gallery">Gallery</string>
        <string name="menu_slideshow">Slideshow</string>

        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="slogan">Turning your goals into reality, one task at a time.</string>
        <string name="get_started">Get Started</string>
        <string name="images">Images</string>
        <string name="videos">Videos</string>
        <string name="audio">Audio</string>
        <string name="contact">Contact</string>
        <string name="setting">Setting</string>
        <string name="home">Home</string>
        <string name="english" translatable="false">English</string>
        <string name="arabic" translatable="false">Arabic</string>
        <string name="hindi" translatable="false">Hindi</string>
        <string name="japanese" translatable="false">Japanese</string>
        <string name="languages">Languages</string>
</resources>